# memhack

./: .env.example  .gitignore  README.md  auth.ts  migration.py  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
ai/: .gcloudignore  Dockerfile  README.md  pyproject.toml
ai/app/: server.py
app/: actions.ts  global-error.tsx  globals.css  layout.tsx
app/(chat)/: page.tsx
app/api/avatar/: route.ts
app/api/chat/: route.ts
app/login/: actions.ts
app/signup/: actions.ts
components/: chat-form.tsx  chat-history.tsx  chat-message.tsx  chat-page-content.tsx  chat-panel.tsx  chat-send-button.tsx  chat.tsx  confirm-button.tsx  connection-card.tsx  create-avatar-form.tsx  create-connection-form.tsx  create-share-note-form.tsx  header.tsx  invitation-card.tsx  logo.tsx  memory-display.tsx  nav-menu.tsx  note-share-card.tsx  note-share-display.tsx  note-share-settings.tsx  providers.tsx  sidebar-expandable.tsx  sidebar-item.tsx  sidebar-list.tsx  sidebar.tsx  sign-out-button.tsx  signup-form.tsx  submit-button.tsx  update-avatar-form.tsx  user-avatar.tsx  user-menu.tsx
components/rich-text-editor/: block-button.tsx  editor-value.tsx  element.tsx  icon.tsx  index.tsx  instruction.tsx  leaf.tsx  mark-button.tsx  menu.tsx  toolbar.tsx  types.ts
components/stocks/: message.tsx  stock.tsx
components/ui/: alert-dialog.tsx  breadcrumb.tsx  button.tsx  dialog.tsx  icons.tsx
lib/: types.ts
lib/chat/: actions.tsx
prisma/: schema.prisma  tsconfig.tsbuildinfo  utility.js
prisma/migrations/20240316032100_create_base_schema/: migration.sql
(+17 files in other folders)
